# airplay

./: .clang-format  .gitignore  CMakeLists.txt  README.md  airplay_server.cpp  rpiplay.cpp
cmake/: FindFFmpeg.cmake
lib/: CMakeLists.txt  raop.c  raop.h  raop_handlers.h  raop_rtp_mirror.c
lib/llhttp/: CMakeLists.txt
lib/playfair/: CMakeLists.txt
renderers/: CMakeLists.txt  audio_renderer.h  audio_renderer_gstreamer.c  audio_renderer_qt.cpp  sdl_event.h  video_renderer.h  video_renderer_ffmpeg_sdl2.cpp  video_renderer_qt.cpp
renderers/h264-bitstream/: CMakeLists.txt
